Implement Repository Mapping via Aider Service (#564)
* rh

* repomap

* Create file tests/repomap.rs

* Create file src/server/services/repomap.rs

* Create file src/server/routes/repomap.rs

* Create file templates/pages/repomap.html

* Create file src/server/services/mod.rs

* Update mod.rs

* Create file src/server/routes/mod.rs

* Delete src/server/routes.rs

* Update Cargo.toml

* Update mod.rs

* Update config.rs

* Update Cargo.toml

* Update repomap.html

* Update config.rs

* Update repomap.rs

* Update repomap.html

* Update content.html

* Update repomap.html

* Update repomap.rs

* Update lib.rs

* cargotoml

* Update repomap.rs

* Update main.rs

* Update repomap.rs

* Delete src/server/routes/mod.rs

* Delete src/server/routes/repomap.rs

* Update main.rs

* Update repomap.rs

* Update lib.rs

* Update lib.rs

* Update mod.rs

* Update config.rs

* Update main.rs

* Update repomap.rs

* Update lib.rs

* Update main.rs

* Update lib.rs

* Update repomap.rs

* Update lib.rs

* Update repomap.rs

* Update lib.rs

* Update repomap.rs

* Update repomap.rs

* Update lib.rs

* Update repomap.rs

* Update repomap.rs

* Update Cargo.toml

* Update repomap.rs

* Update repomap.rs

* cargolock

* feat: Add new blog post about Repo Map Tool on home page

* feat: Add link to repo map tool and clean up blog post formatting

* home template

* feat: Add Markdown support for blog posts using pulldown-cmark

* feat: Add markdown link to Repo Map Tool blog post

* feat: Add markdown filter to Askama for rendering blog post content

* refactor: Remove duplicate markdown filter and import from template_filters module

* fix: Resolve Askama template and filter registration errors

* chore: Register markdown filter and update blog template

* fix: Remove incorrect Askama filter registration and temporarily disable markdown filter

* feat: Implement ma

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ secp256k1 = { version = "0.27", features = ["rand", "bitcoin_hashes", "global-co
 chrono = "0.4"
 lazy_static = "1.4"
 sqlx = { version = "0.8.1", features = ["time", "uuid", "runtime-tokio", "postgres", "json", "tls-native-tls", "bigdecimal"] }
-config = "0.14"  # Updated to latest version
+config = "0.14"
 secrecy = { version = "0.8", features = ["serde"] }
 tracing = { version = "0.1", features = ["log"] }
 url = "2.4"
@@ -41,9 +41,13 @@ axum = "0.8.1"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 tower = "0.5.2"
 tower-http = { version = "0.6.2", features = ["fs"] }
+reqwest = { version = "0.11", features = ["json"] }
+pulldown-cmark = "0.9"
+askama_escape = "0.1"
 
 [dev-dependencies]
 actix-web = "4.4"
 tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"] }
 serde_json = "1.0"
 lazy_static = "1.4"
+wiremock = "0.5"
